beginning work in progress on script consolidation for kubernetes, idaholab/Malcolm#172

--- a/.dockerignore
+++ b/.dockerignore
@@ -32,6 +32,7 @@ pcap
 _site
 scripts
 !scripts/malcolm_common.py
+!scripts/malcolm_kubernetes.py
 !scripts/malcolm_utils.py
 zeek-logs
 suricata-logs
