--- a/kubernetes/00-ingress.yml
+++ b/kubernetes/00-ingress.yml
@@ -1,4 +1,3 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -26,3 +25,14 @@ spec:
             name: nginx-proxy
             port:
               number: 443
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: tcp-services
+  namespace: malcolm
+data:
+  5044: "malcolm/logstash:5044"
+  5045: "malcolm/filebeat:5045"
+  8022: "malcolm/upload:22"
+  9200: "malcolm/nginx-proxy:9200"
