--- a/kubernetes/03-dashboards.yml
+++ b/kubernetes/03-dashboards.yml
@@ -8,6 +8,7 @@ spec:
   ports:
     - port: 5601
       protocol: TCP
+      name: http
   selector:
     name: dashboards-deployment
 
@@ -34,7 +35,9 @@ spec:
         stdin: false
         tty: true
         ports:
-          - containerPort: 5601
+          - name: http
+            protocol: TCP
+            containerPort: 5601
         envFrom:
           - configMapRef:
               name: process-env
