idaholab/Malcolm#171, turn off proxy buffering so requests go straight to Malcolm's internal NGINX. from the docs (https://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_buffer_size), 'when buffering is disabled, the response is passed to a client synchronously, immediately as it is received'

--- a/kubernetes/00-ingress.yml
+++ b/kubernetes/00-ingress.yml
@@ -9,12 +9,16 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "https"
     nginx.ingress.kubernetes.io/preserve-trailing-slash: "false"
     nginx.ingress.kubernetes.io/ssl-passthrough: "false"
+    nginx.ingress.kubernetes.io/client-body-buffer-size: "512k"
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "512k"
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-buffering: "on"
-    nginx.ingress.kubernetes.io/proxy-buffer-size: "512k"
-    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "8192m"
+
 spec:
   rules:
   - http:
