use PersistentVolume for PCAP upload (idaholab/Malcolm#171)

--- a/file-upload/php/php.ini
+++ b/file-upload/php/php.ini
@@ -44,6 +44,7 @@ user_dir =
 enable_dl = Off
 file_uploads = On
 upload_max_filesize = 50G
+upload_tmp_dir = "/tmp/upload_tmp_dir"
 max_file_uploads = 8
 allow_url_fopen = On
 allow_url_include = Off
