set php's upload_tmp_dir to a directory on the same storage as the /pcap/upload directory (idaholab/Malcolm#171)

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -421,6 +421,7 @@ services:
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
+      - ./pcap/spool:/tmp/upload_tmp_dir
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost"]
       interval: 30s
