--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: ghcr.io/idaholab/malcolm/opensearch:kubernetes
+    image: ghcr.io/idaholab/malcolm/opensearch:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -43,7 +43,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: ghcr.io/idaholab/malcolm/dashboards-helper:kubernetes
+    image: ghcr.io/idaholab/malcolm/dashboards-helper:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -73,7 +73,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: ghcr.io/idaholab/malcolm/dashboards:kubernetes
+    image: ghcr.io/idaholab/malcolm/dashboards:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -102,7 +102,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: ghcr.io/idaholab/malcolm/logstash-oss:kubernetes
+    image: ghcr.io/idaholab/malcolm/logstash-oss:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -150,7 +150,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: ghcr.io/idaholab/malcolm/filebeat-oss:kubernetes
+    image: ghcr.io/idaholab/malcolm/filebeat-oss:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -188,7 +188,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: ghcr.io/idaholab/malcolm/arkime:kubernetes
+    image: ghcr.io/idaholab/malcolm/arkime:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -229,7 +229,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: ghcr.io/idaholab/malcolm/zeek:kubernetes
+    image: ghcr.io/idaholab/malcolm/zeek:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -270,7 +270,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: ghcr.io/idaholab/malcolm/zeek:kubernetes
+    image: ghcr.io/idaholab/malcolm/zeek:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -301,7 +301,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: ghcr.io/idaholab/malcolm/suricata:kubernetes
+    image: ghcr.io/idaholab/malcolm/suricata:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -340,7 +340,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: ghcr.io/idaholab/malcolm/suricata:kubernetes
+    image: ghcr.io/idaholab/malcolm/suricata:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -369,7 +369,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: ghcr.io/idaholab/malcolm/file-monitor:kubernetes
+    image: ghcr.io/idaholab/malcolm/file-monitor:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -397,7 +397,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: ghcr.io/idaholab/malcolm/pcap-capture:kubernetes
+    image: ghcr.io/idaholab/malcolm/pcap-capture:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -422,7 +422,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: ghcr.io/idaholab/malcolm/pcap-monitor:kubernetes
+    image: ghcr.io/idaholab/malcolm/pcap-monitor:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -451,7 +451,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: ghcr.io/idaholab/malcolm/file-upload:kubernetes
+    image: ghcr.io/idaholab/malcolm/file-upload:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
@@ -479,7 +479,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: ghcr.io/idaholab/malcolm/htadmin:kubernetes
+    image: ghcr.io/idaholab/malcolm/htadmin:23.04.1
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -507,7 +507,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: ghcr.io/idaholab/malcolm/freq:kubernetes
+    image: ghcr.io/idaholab/malcolm/freq:23.04.1
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -532,7 +532,7 @@ services:
       retries: 3
       start_period: 60s
   netbox:
-    image: ghcr.io/idaholab/malcolm/netbox:kubernetes
+    image: ghcr.io/idaholab/malcolm/netbox:23.04.1
     build:
       context: .
       dockerfile: Dockerfiles/netbox.Dockerfile
@@ -568,7 +568,7 @@ services:
       retries: 3
       start_period: 120s
   netbox-postgres:
-    image: ghcr.io/idaholab/malcolm/postgresql:kubernetes
+    image: ghcr.io/idaholab/malcolm/postgresql:23.04.1
     build:
       context: .
       dockerfile: Dockerfiles/postgresql.Dockerfile
@@ -595,7 +595,7 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis:
-    image: ghcr.io/idaholab/malcolm/redis:kubernetes
+    image: ghcr.io/idaholab/malcolm/redis:23.04.1
     build:
       context: .
       dockerfile: Dockerfiles/redis.Dockerfile
@@ -626,7 +626,7 @@ services:
       retries: 3
       start_period: 45s
   netbox-redis-cache:
-    image: ghcr.io/idaholab/malcolm/redis:kubernetes
+    image: ghcr.io/idaholab/malcolm/redis:23.04.1
     build:
       context: .
       dockerfile: Dockerfiles/redis.Dockerfile
@@ -656,7 +656,7 @@ services:
       retries: 3
       start_period: 45s
   api:
-    image: ghcr.io/idaholab/malcolm/api:kubernetes
+    image: ghcr.io/idaholab/malcolm/api:23.04.1
     build:
       context: .
       dockerfile: Dockerfiles/api.Dockerfile
@@ -686,7 +686,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: ghcr.io/idaholab/malcolm/nginx-proxy:kubernetes
+    image: ghcr.io/idaholab/malcolm/nginx-proxy:23.04.1
     restart: "no"
     stdin_open: false
     tty: true
