idaholab/Malcolm#190, just about everything for synchrophasor minus the dashboard

--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -65,3 +65,4 @@ ZEEK_DISABLE_SPICY_STUN=
 ZEEK_DISABLE_SPICY_TAILSCALE=
 ZEEK_DISABLE_SPICY_TFTP=
 ZEEK_DISABLE_SPICY_WIREGUARD=
+ZEEK_SYNCHROPHASOR_DETAILED=
