idaholab/Malcolm#190, a little normalization and dashboards

--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -2213,6 +2213,15 @@ filter {
       split => { "[zeek][synchrophasor_data_detail][est_rectangular_real]" => "," }
     }
 
+    if ([zeek][synchrophasor][frame_size]) {
+      mutate { id => "mutate_add_field_totDataBytes_zeek_synchrophasor_frame_size"
+               add_field => { "[totDataBytes]" => "%{[zeek][synchrophasor][frame_size]}" } }
+    }
+    if ([zeek][synchrophasor][frame_size_tot]) {
+      mutate { id => "mutate_add_field_totDataBytes_zeek_synchrophasor_frame_size_tot"
+               add_field => { "[totDataBytes]" => "%{[zeek][synchrophasor][frame_size_tot]}" } }
+    }
+
   } else if ([log_source] == "tds_rpc") {
     #############################################################################################################################
     # tds_rpc.log specific logic
