fix version in kubernetes manifests

--- a/kubernetes/02-opensearch.yml
+++ b/kubernetes/02-opensearch.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: opensearch-container
-        image: ghcr.io/idaholab/malcolm/opensearch:kubernetes
+        image: ghcr.io/idaholab/malcolm/opensearch:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
