--- a/kubernetes/05-pcap-monitor.yml
+++ b/kubernetes/05-pcap-monitor.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: pcap-monitor-container
-        image: ghcr.io/idaholab/malcolm/pcap-monitor:kubernetes
+        image: ghcr.io/idaholab/malcolm/pcap-monitor:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
