--- a/kubernetes/06-arkime.yml
+++ b/kubernetes/06-arkime.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: arkime-container
-        image: ghcr.io/idaholab/malcolm/arkime:kubernetes
+        image: ghcr.io/idaholab/malcolm/arkime:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
