--- a/kubernetes/10-suricata.yml
+++ b/kubernetes/10-suricata.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: suricata-offline-container
-        image: ghcr.io/idaholab/malcolm/suricata:kubernetes
+        image: ghcr.io/idaholab/malcolm/suricata:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
