--- a/kubernetes/12-filebeat.yml
+++ b/kubernetes/12-filebeat.yml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: filebeat-container
-        image: ghcr.io/idaholab/malcolm/filebeat-oss:kubernetes
+        image: ghcr.io/idaholab/malcolm/filebeat-oss:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
