--- a/kubernetes/13-logstash.yml
+++ b/kubernetes/13-logstash.yml
@@ -47,7 +47,7 @@ spec:
       #       topologyKey: "kubernetes.io/hostname"
       containers:
       - name: logstash-container
-        image: ghcr.io/idaholab/malcolm/logstash-oss:kubernetes
+        image: ghcr.io/idaholab/malcolm/logstash-oss:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
