--- a/kubernetes/15-netbox-redis.yml
+++ b/kubernetes/15-netbox-redis.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: netbox-redis-container
-        image: ghcr.io/idaholab/malcolm/redis:kubernetes
+        image: ghcr.io/idaholab/malcolm/redis:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
