--- a/kubernetes/17-netbox-postgres.yml
+++ b/kubernetes/17-netbox-postgres.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: netbox-postgres-container
-        image: ghcr.io/idaholab/malcolm/postgresql:kubernetes
+        image: ghcr.io/idaholab/malcolm/postgresql:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
