--- a/kubernetes/18-netbox.yml
+++ b/kubernetes/18-netbox.yml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
       - name: netbox-container
-        image: ghcr.io/idaholab/malcolm/netbox:kubernetes
+        image: ghcr.io/idaholab/malcolm/netbox:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
