--- a/kubernetes/23-freq.yml
+++ b/kubernetes/23-freq.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: freq-container
-        image: ghcr.io/idaholab/malcolm/freq:kubernetes
+        image: ghcr.io/idaholab/malcolm/freq:23.04.1
         imagePullPolicy: Always
         stdin: false
         tty: true
