minor arkime ini tweaks

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -42,7 +42,7 @@ parseSMB=true
 parseQSValue=false
 supportSha256=false
 maxReqBody=64
-config.reqBodyOnlyUtf8=true
+reqBodyOnlyUtf8=true
 smtpIpHeaders=X-Originating-IP:;X-Barracuda-Apparent-Source-IP:
 parsersDir=/opt/arkime/parsers
 pluginsDir=/opt/arkime/plugins
@@ -54,7 +54,6 @@ pcapWriteMethod=simple
 pcapWriteSize=262143
 simpleCompression=zstd
 simpleZstdLevel=3
-dbBulkSize=300000
 compressES=false
 maxESConns=30
 maxESRequests=500
